# riscv_simulator

./: .gitignore  CMakeLists.txt  README.md
include/: a_extension.h  b_inst.h  clint.h  cpu.h  csr.h  disassemble.h  display.h  exception.h  f_extension.h  fence_inst.h  helper.h  i_64_inst.h  i_inst.h  j_inst.h  keyboard.h  l_inst.h  load_inst.h  m_extension.h  memory.h  mmio.h  mmu.h  plic.h  r_inst.h  riscv_defs.h  s_inst.h  simulator.h  uart.h  uart_sim.h
src/: a_extension.c  b_inst.c  clint.c  cpu.c  csr.c  disassemble.c  display.c  exception.c  f_extension.c  fence_inst.c  helper.c  i_64_inst.c  i_inst.c  j_inst.c  keyboard.c  l_inst.c  load_inst.c  m_extension.c  main.c  memory.c  mfprintf.c  mfprintf.h  mmu.c  plic.c  r_inst.c  s_inst.c  simulator.c  timer.c  uart.c  uart_sim.c
tests/: hello_ncurses  hello_ncurses.c  multi_windows  multi_windows.c  test.s  test_bj.elf  test_bj.s  test_i.elf  test_i.s  test_keyboard  test_keyboard.c  test_log  test_log.c  test_memory.elf  test_memory.s  test_new.elf  test_new.s
